--- a/src/app/pages/schedule/schedule.html
+++ b/src/app/pages/schedule/schedule.html
@@ -56,10 +56,10 @@
   </ion-list>
 
   <ion-list-header [hidden]="shownSessions > 0">
-    No Sessions Found
+    Inga bokningar
   </ion-list-header>
 
-  <ion-fab slot="fixed" vertical="bottom" horizontal="end" #fab>
+  <!-- <ion-fab slot="fixed" vertical="bottom" horizontal="end" #fab>
     <ion-fab-button #fabButton (click)="toggleList(fabButton, fabList)"><ion-icon name="share"></ion-icon></ion-fab-button>
     <ion-fab-list #fabList side="top">
       <ion-fab-button color="vimeo" (click)="openSocial('Vimeo', fab)">
@@ -75,5 +75,5 @@
         <ion-icon name="logo-facebook"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
-  </ion-fab>
+  </ion-fab> -->
 </ion-content>
