Added some images and changed primary color

--- a/src/app/pages/tutorial/tutorial.html
+++ b/src/app/pages/tutorial/tutorial.html
@@ -9,15 +9,14 @@
 <ion-content>
   <ion-slides #slides (ionSlideWillChange)="onSlideChangeStart($event)" pager="false">
     <ion-slide>
-      <img src="assets/img/ica-slidebox-img-1.png" class="slide-image" />
+      <img src="assets/img/cars/Ford.png" class="slide-image" />
       <h2 class="slide-title">
-        Welcome to
-        <b>ICA</b>
+        Välkommen till
+        <b>Provkörningsbokning</b>
       </h2>
       <p>
-        The
-        <b>ionic conference app</b> is a practical preview of the ionic framework in action, and a demonstration of proper code
-        use.
+        Fordonsdatas
+        <b>Provkörningsbokning</b> är ett praktiskt och effektivt sätt att hantera bilar och intresserade kunder under hela affären.
       </p>
     </ion-slide>
 
