--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,14 +21,14 @@
 // https://beta.ionicframework.com/docs/theming/color-generator
 
 :root {
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56,128,255;
+  --ion-color-primary: #f1a147;
+  --ion-color-primary-rgb: 241,161,71;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255,255,255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #dc923eee;
+  --ion-color-primary-tint: #fcac50;
 
-  --ion-color-secondary: #0cd1e8;
+  --ion-color-secondary: #f2b673;
   --ion-color-secondary-rgb: 12,209,232;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255,255,255;
