--- a/src/app/pages/tabs-page/tabs-page.html
+++ b/src/app/pages/tabs-page/tabs-page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
-  <ion-tab label="Bilar" icon="car" href="/app/tabs/(map:map)">
-    <ion-router-outlet stack name="map"></ion-router-outlet>
+  <ion-tab label="Bilar" icon="car" href="/app/tabs/(cars:cars">
+    <ion-router-outlet stack name="cars"></ion-router-outlet>
   </ion-tab>
   <ion-tab label="Bokningar" icon="calendar" href="/app/tabs/(schedule:schedule)">
     <ion-router-outlet stack name="schedule"></ion-router-outlet>
