--- a/src/app/pages/car/car.page.html
+++ b/src/app/pages/car/car.page.html
@@ -1,9 +1,30 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>car</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button text="Bilar" defaultHref="/app/tabs/(cars:cars)"></ion-back-button>
+    </ion-buttons>
+    <ion-title>{{session?.name}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
 
+  
+
+  <div *ngIf="session">
+    <h1 style="text-align: center">{{session.name}}</h1>
+    
+    <div class="car-image">
+        <img src="assets/img/cars/Audi-A7.png" alt="Ionic Logo">
+    </div>
+
+    <h4 *ngFor="let speaker of session?.speakers">
+      {{speaker.name}}
+    </h4>
+    <p>
+      {{session.timeStart}} - {{session.timeEnd}}
+    </p>
+    <p>{{session.location}}</p>
+    <p>{{session.description}}</p>
+  </div>
 </ion-content>
