--- a/src/app/pages/tabs-page/tabs-page.html
+++ b/src/app/pages/tabs-page/tabs-page.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab label="Bilar" icon="car" href="/app/tabs/(cars:cars">
+  <ion-tab label="Bilar" icon="car" href="/app/tabs/(cars:cars)">
     <ion-router-outlet stack name="cars"></ion-router-outlet>
   </ion-tab>
   <ion-tab label="Bokningar" icon="calendar" href="/app/tabs/(schedule:schedule)">
