--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -17,7 +17,7 @@
     <img src="assets/img/ionic-logo-white.svg" alt="ionic logo">
   </div>
   <div padding class="about-info">
-    <h4>Ionic Conference</h4>
+    <h4>Provkörning</h4>
 
     <ion-list lines="none">
       <ion-item>
